Updated the lannding page and navigations for both mobile and desktop

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -21,3 +21,11 @@
 .footer-website {
   text-align: left;
 }
+/* Write a media query for larger screens */
+@media (min-width: 768px) {
+  .footer{
+    display: none;
+  }
+
+
+}
